# abit-app-list-analyser

./: .gitignore  CONFIG.md  Cargo.toml  FUNDING_SEPARATION_FIX.md  GUIDE.md  IMPLEMENTATION_CHANGES.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  analyze_example.sh  build.bat  build.sh  build_original.sh  config.example.toml  config.toml
.github/workflows/: build.yml
data-source/: contract.html
src/: analyzer.rs  main.rs  models.rs  scraper.rs
